<resources>
    <string name="app_name">Reto1</string>
    <string name="login_welcome">Bienvenido a YouTube</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_loginBtn">Iniciar sesión</string>

    <string name="menuyt_home">Home</string>
    <string name="menuyt_publicar">Publicar</string>
    <string name="menuyt_perfil">Perfil</string>
    <string name="menuyt_toolbar_title">Youtube</string>

    <string name="fragnewpost_gallery">Galeria</string>
    <string name="fragnewpost_camera">Cámara</string>
    <string name="fragnewpost_hint_title">Título</string>
    <string name="fragnewpost_button_publish">Publicar</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="profile_signoutBtn">Cerrar sesión</string>
    <string name="profile_updateBtn">Guardar</string>

</resources>